# embedded_system_design

./: .gitignore  README.md  readme.md  tests.cpp  tests.py
tests/: .gitignore  CMakeLists.txt  tests.cpp  tests.py
virtual_prototype/: README.md
virtual_prototype/modules/DMA/: ramDMA_TB  ramDmaCi.v  ramDma_tb.v  ramdmaCi.v  ramdma_tb.v
virtual_prototype/modules/DMA/verilog/: dualPortSSRAM.v  gtkwave_signals.gtkw  ramDmaCi.v  ramDmaCi_tb  ramDmaCi_tb.v  ramdmaCi.v  ramdma_tb.v
virtual_prototype/modules/bios/: compile_bios.sh  compile_bios1.sh
virtual_prototype/modules/bios/c/: bios.c  bios.c.compressed  bios.c.orig  bios1.c  bios1.c.compressed  bios1.c.orig  caches.h  crt0.S  date.h  exceptionHandlers.c  flash.c  flash.h  or32Print.c  or32Print.h  uart.c  uart.h  vgaPrint.c  vgaPrint.h
virtual_prototype/modules/bios/sandbox/: bios.mem  bios1.mem  bios1_rom-behavior.vhdl  bios1_rom-entity.vhdl  bios1_rom.txt  bios1_rom.v  bios_rom-behavior.vhdl  bios_rom.txt  bios_rom.v  control.mem
virtual_prototype/modules/bios/util/: README  biosgen8k.c  convert_or32.c  convert_or32.c.compressed  decode.c  read_elf.c  read_elf.h
virtual_prototype/modules/bios/verilog/: bios.v  softBios.v
virtual_prototype/modules/bus_arbiter/verilog/: busArbiter.v  (+1 more)
virtual_prototype/programms/DMA/: makefile
virtual_prototype/programms/camera/: makefile
virtual_prototype/programms/grayscaleDMA/: makefile
virtual_prototype/programms/helloWorld/: makefile
virtual_prototype/programms/optic_flow/: makefile
virtual_prototype/systems/singleCore/: Makefile  Makefile.intel
(+337 files in other folders)
